--- a/style.css
+++ b/style.css
@@ -1,5 +1,22 @@
+/*  Google fonts imported
+font-family: 'Montserrat', sans-serif;
+font-family: 'EB Garamond', serif;
+font-family: 'Aleo', serif;
+font-family: 'Charm', cursive;
+font-family: 'Mali', cursive;
+ */
+
+body{
+    /* background: paleturquoise; */
+   background:  linear-gradient( paleturquoise, coral) no-repeat fixed center;
+    font-family: 'Mali', cursive;
+}
+
+h1{
+    text-align: center;
+    font-family: 'Mali', cursive;
+}
 .weather-container{
-    background: lightcoral;
     text-align: center;
 }
 .weather{
